# data

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  TEST_REPORT.md  docker-compose.prod.yml  docker-compose.yml  数据要素.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/ai/: auth_service.py  chat_service.py  report_service.py
backend/app/core/: config.py  constants.py  logging.py  metrics.py
backend/app/data/: __init__.py  analytics.py  backtest_engine.py  bdi_client.py  cache.py  chinadata_client.py  commodity_client.py  comtrade_client.py  correlation_engine.py  etl.py  exchange_rate_client.py  factor_engine.py  imf_client.py  portfolio_optimizer.py  signal_generator.py  stats_gov_client.py  tariff_loader.py  ts_models.py  var_calculator.py  worldbank_client.py
backend/app/middleware/: __init__.py  auth.py  errors.py  metrics_mw.py  rate_limit.py  tracking.py
backend/app/mock_data/: init_db.py  trade_generator.py
backend/app/models/: database.py  schemas.py  schemas_auth.py  schemas_db.py
backend/app/repositories/: __init__.py  trade_repo.py
backend/app/services/: __init__.py  trade_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_ai_predict_api.py  test_analytics_api.py  test_assets_api.py  test_auth.py  test_auth_routes.py  test_chat_api.py  test_datasources_api.py  test_enterprise_api.py  test_error_handlers.py  test_health_api.py  test_middleware.py  test_overview_api.py  test_quant_api.py  test_report_routes.py  test_socioeconomic_api.py  test_tariff_api.py  test_trade_api.py
backend/tests/unit/: test_auth_service.py  test_burst_detection.py  test_cache.py  test_config.py  test_constants.py  test_correlation_engine.py  test_error_sanitization.py  test_metrics.py  test_portfolio_optimizer.py  test_quant_engines.py  test_quant_routes.py  test_rate_limit.py  test_rate_limiter.py  test_rcep_savings.py  test_report_service.py  test_risk_score.py  test_tracking.py  test_trade_repo.py  test_trade_service.py
docs/: API.md  (+1 more)
(+50 files in other folders)
